fix jumping scrollbar

--- a/css/style.less
+++ b/css/style.less
@@ -19,6 +19,16 @@ ul {
 
 
 
+// Fix for jumping scrollbar: https://aykevl.nl/2014/09/fix-jumping-scrollbar
+@media screen and (min-width: 35em) {
+  html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
+}
+
+
+
 // Fluid Typography ===================================================
 
 @base-font-size: 18px;
